// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Treats DHT as account number 1`] = `
<div
  className="refill-number-field fYeEn hulnrW"
>
  <label
    className="refill-field-label"
    htmlFor={undefined}
  >
    Account number
  </label>
  <div
    className="refill-field"
  >
    <input
      className="refill-number-field-input"
      defaultValue=""
      onChange={[Function]}
      type="tel"
    />
    --CHILDREN--
  </div>
  <p
    className="refill-field-hint"
    dangerouslySetInnerHTML={
      Object {
        "__html": "The DHT account number to top up",
      }
    }
  />
</div>
`;

exports[`Treats VOIP as phone number 1`] = `
<div
  className="refill-number-field fYeEn hulnrW"
>
  <label
    className="refill-field-label"
    htmlFor={undefined}
  >
    Phone number
  </label>
  <div
    className="refill-field"
  >
    <input
      className="refill-number-field-input"
      defaultValue="+1 "
      onChange={[Function]}
      type="tel"
    />
    --CHILDREN--
  </div>
  <p
    className="refill-field-hint"
    dangerouslySetInnerHTML={
      Object {
        "__html": "The phone number to top up",
      }
    }
  />
</div>
`;

exports[`Uses default value 1`] = `
<div
  className="refill-number-field fYeEn hulnrW"
>
  <label
    className="refill-field-label"
    htmlFor={undefined}
  >
    Phone number
  </label>
  <div
    className="refill-field"
  >
    <input
      className="refill-number-field-input"
      defaultValue="+1 201 555 5555"
      onChange={[Function]}
      type="tel"
    />
    --CHILDREN--
  </div>
  <p
    className="refill-field-hint"
    dangerouslySetInnerHTML={
      Object {
        "__html": "The phone number to top up",
      }
    }
  />
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="refill-number-field fYeEn hulnrW"
>
  <label
    className="refill-field-label"
    htmlFor={undefined}
  >
    Phone number
  </label>
  <div
    className="refill-field"
  >
    <input
      className="refill-number-field-input"
      defaultValue="+1 "
      onChange={[Function]}
      type="tel"
    />
    --CHILDREN--
  </div>
  <p
    className="refill-field-hint"
    dangerouslySetInnerHTML={
      Object {
        "__html": "The phone number to top up",
      }
    }
  />
</div>
`;
